Fix cropped text

--- a/src/assets/styles/components/_page-heading.scss
+++ b/src/assets/styles/components/_page-heading.scss
@@ -28,7 +28,7 @@
 }
 
 .country-progress-heading__title {
-  width: 60.5rem;
+  max-width: 60.5rem;
 }
 
 .page-heading__title-wrapper {
